<resources>
    <string name="app_name">SchoolKey</string>
    <string name="quit">退出</string>
    <string name="setting">设置</string>
    <string name="identity">身份:</string>
    <string name="stu_ID">学号:</string>
    <string name="nickname">昵称:</string>
    <string name="academy">学院</string>
    <string name="pwd">密码:</string>
    <string name="rmb_pwd">记住</string>
    <string name="login">登录</string>
    <string name="bind">绑定手机</string>
    <string name="fgt_pwd">忘记密码?</string>
    <string name="plz_input_stu_ID">请输入教务处学号</string>
    <string name="plz_input_nickname">请输入昵称</string>
    <string name="plz_input_pwd">请输入教务处密码</string>
    <string name="plz_input_academy">请输入学院</string>
    <string name="plz_input_leave_reason">请输入请假原因(100字以内)</string>
    <string name="log_your_account">登录您的账号</string>
    <string name="real_name">真名 : </string>
    <string name="real_name_function">用于课表等功能</string>
    <string name="find_your_account">找回您的密码</string>
    <string name="rtn">返回</string>
    <string name="send_code">发送验证码</string>
    <string name="code">验证码:</string>
    <string name="input_code">输入接收的验证码</string>
    <string name="phone_number">手机号:</string>
    <string name="plz_input_phone_number">请输入手机号</string>
    <string name="sure">确认</string>
    <string name="know">知道了</string>
    <string name="new_pwd">新密码:</string>
    <string name="repeat_pwd">密码确认:</string>
    <string name="plz_input_new_pwd">请输入新密码</string>
    <string name="plz_repeat_pwd">请确认密码</string>
    <string name="schedule">课表</string>
    <string name="leave">请假</string>
    <string name="discuss">讨论</string>
    <string name="mine">我的</string>
    <string name="information">资讯</string>
    <string name="get_schedule">获取课表</string>
    <string name="register">注册</string>
    <string name="choose_identity">选择身份:</string>
    <string name="agree">同意</string>
    <string name="not_agree">未同意</string>
    <string name="leave_reason">请假原因 : </string>
    <string name="set_time">设置时间</string>
    <string name="set_date">设置日期</string>
    <string name="leave_request_time">申请时间 : </string>
    <string name="leave_start_time">开始时间 : </string>
    <string name="leave_end_time">结束时间 : </string>
    <string name="result">结果 : </string>
    <!--课堂信息-->
    <string name="name">名称 : </string>
    <string name="ask_leave_persion">请假人数 : </string>
    <string name="signed_persion">签到人数 : </string>
    <string name="absent_persion">缺勤人数 : </string>
    <string name="position">教室 : </string>
    <string name="teacher">老师 : </string>
    <string name="number">节数 : </string>
    <string name="weeks">周数 : </string>
    <string name="oneKeySign">签到</string>
    <string name="leave_detail">请假详情</string>
    <string name="homework">作业</string>
    <string name="notice">公告</string>
    <string name="test">考试</string>
    <string name="content">内容 : </string>
    <string name="time">时间 : </string>
    <string name="startTime">起始时间</string>
    <string name="endTime">截止时间</string>
    <string name="remind">提醒</string>
    <string name="remindTime">提醒时间</string>
    <string name="add">添加</string>
    <string name="submit">提交</string>
    <string name="submit_photo">提交照片</string>
    <string name="now_position">当前地点 : </string>
    <string name="loading">请等待......</string>
    <string name="showPhoto">显示照片</string>
    <string name="upload_photo">上传照片</string>
    <string name="getPosition">查看位置</string>
    <string name="msg_pos">位置信息</string>
    <string name="complete_msg">完善信息</string>
    <string name="personal_msg">个人信息</string>
    <string name="student">学生 : </string>
    <string name="s_id">学号 : </string>
    <string name="has_seen">已阅</string>
    <string name="not_seen">未阅</string>
    <string name="setNowWeek">设为当前周</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="change_account">切换用户</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_course_sign">CourseSignActivity</string>

    <!--counsellor menu text-->
    <string name="mutiChoose">多选</string>
    <string name="clearOut">清空</string>
    <string name="chooseAll">全选</string>
    <string name="passLeave">已批准</string>

    <!--leave_detail-->
    <string name="agreeLeave">同意</string>
    <string name="rejectLeave">拒绝</string>
    <string name="empty"></string>
    <string name="layout_dialog_loading">正在加载</string>
</resources>
