<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".activity.BindPhoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout2">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rtn"
            android:id="@+id/btn_rtn"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_azure"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bind"
            android:id="@+id/textView7"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:id="@+id/gridLayout3"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/plz_input_stu_ID"
            android:ems="8"
            android:id="@+id/et_stu_ID"
            android:layout_row="0"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/stu_ID"
            android:id="@+id/textView8"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/phone_number"
            android:id="@+id/textView9"
            android:layout_row="1"
            android:layout_column="0"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/plz_input_pwd"
            android:ems="8"
            android:id="@+id/et_phone"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/code"
            android:id="@+id/textView10"
            android:layout_row="2"
            android:layout_column="0"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_code"
            android:ems="8"
            android:id="@+id/et_code"
            android:layout_row="2"
            android:layout_column="1"/>
    </GridLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        android:id="@+id/btn_send_code"
        android:layout_alignTop="@+id/gridLayout3"
        android:layout_toRightOf="@+id/gridLayout3"
        android:layout_toEndOf="@+id/gridLayout3"
        android:layout_marginTop="34dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:id="@+id/btn_sure"
        android:background="@drawable/btn_azure"
        android:layout_below="@+id/gridLayout3"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
