<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_complete_msg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bclog"
    tools:context="com.fkjslee.schoolv3.student.activity.CompleteMsgActivity">


    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/complete_msg"
            android:id="@+id/textView3"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/iv_rtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleY="0.65"
            android:scaleX="0.65"
            android:paddingLeft="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"
            android:src="@drawable/backspace"/>
    </RelativeLayout>


    <GridLayout
        android:id="@+id/gl_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nickname"
            android:id="@+id/textView0"
            android:layout_row="0"
            android:layout_column="0"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/plz_input_nickname"
            android:ems="10"
            android:id="@+id/et_nickName"
            android:layout_row="0"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/stu_ID"
            android:id="@+id/textView"
            android:layout_row="1"
            android:layout_column="0"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/plz_input_stu_ID"
            android:ems="10"
            android:id="@+id/et_stu_ID"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pwd"
            android:id="@+id/textView2"
            android:layout_row="2"
            android:layout_column="0"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/plz_input_pwd"
            android:ems="10"
            android:id="@+id/et_pwd"
            android:layout_row="2"
            android:layout_column="1"/>
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gl_data"
        android:text="@string/upload_photo"
        android:id="@+id/btn_uploadPhoto"
        android:textSize="20sp"
        android:background="@drawable/btn_azure"
        android:layout_centerVertical="true"
        android:layout_marginLeft="67dp"
        android:layout_marginStart="67dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btn_submit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/btn_azure"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp" />


</RelativeLayout>
